# mayan-edms-rag

./: .env.example  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml
hybrid_rag_qa/: .dockerignore  .env.example  .env.local.example  .gitignore  README.md  pyproject.toml  requirements.txt
hybrid_rag_qa/docker/: .env.docker  Dockerfile  docker-compose.yml  ollama-entrypoint.sh
hybrid_rag_qa/evaluation/: README.md  __init__.py  evaluation_dataset.py  run_evaluation.py
hybrid_rag_qa/prompts/: 01_boilerplate_detection.txt  02_metadata_extraction.txt  03_summarization.txt  04_query_extraction.txt  05_rag_system.txt  06_rag_user.txt  07_rag_user_concise.txt  08_rag_user_structured.txt
hybrid_rag_qa/scripts/: README.md  __init__.py  create_payload_indexes.py  index_documents.py  query_app.py  recreate_collection.py  run_api_server.py
hybrid_rag_qa/src/: __init__.py  app.py  cache.py  config.py  langfuse_tracker.py  resilience.py  utils.py
hybrid_rag_qa/src/api/: __init__.py  server.py
hybrid_rag_qa/src/components/: README.md  __init__.py  boilerplate_filter.py  document_type_detector.py  metadata_enricher.py  query_metadata_extractor.py  semantic_chunker.py  summarizer.py
hybrid_rag_qa/src/integrations/: __init__.py  mayan_client.py
hybrid_rag_qa/src/pipelines/: __init__.py  indexing.py  retrieval.py
hybrid_rag_qa/tests/: __init__.py  conftest.py  test_config.py  test_indexing.py  test_retrieval.py
mayan-edms-new/: .gitignore  .gitlab-ci.yml  CITATION.cff  HISTORY.rst  LICENSE.tmpl  Makefile  TRADEMARK_POLICY.md  config.env  (+3 more)
(+8347 files in other folders)
